--- a/app/views/questions/_aside.html.erb
+++ b/app/views/questions/_aside.html.erb
@@ -1,9 +1,10 @@
 <div class="aside">
-<div class="search2">
-<%= search_form_for @search do |f|%>
-  <%= f.search_field :title_or_body_cont %>
-  <%= f.submit "検索"%>
-<%end%>
-<div class="category">
-aa
+  <div class="search2">
+    <%= search_form_for @search do |f|%>
+      <%= f.search_field :title_or_body_cont , placeholder: '質問を検索',class:"search-box__text"%>
+      <%= button_tag type: 'submit', class: "search-box__btn" do %>
+      <%= icon('fas', 'search') %>
+      <% end %>
+    <%end%>
+  </div>
 </div>
