--- a/app/assets/stylesheets/side.scss
+++ b/app/assets/stylesheets/side.scss
@@ -1,7 +1,8 @@
 .l-side {
   float: left;
   width: 280px;
-  margin: 0 40px 0 0;
+  margin-right: 20px;
+  margin-left: 45px;
 }
 .mypage-nav-list{
   margin-top: 67px;
