--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -144,3 +144,15 @@ ul {
   font-size: 43px;
 }
 }
+
+.bookmark{
+  display: inline-block;
+  color: #333;
+  border: 1px solid white;
+  background: white;
+  padding: 8px 16px;
+  border-radius: 40px;
+  .span{
+    font-size: 14px;
+  }
+}
