--- a/app/views/questions/_l-side.html.erb
+++ b/app/views/questions/_l-side.html.erb
@@ -13,6 +13,14 @@
         <%= link_to "年代", edit_user_path(current_user) ,class:'mypage-nav-list-item' if user_signed_in?%>
         <i class="icon-arrow-right"></i>
      </li>
+     <li>
+        <%= link_to "回答ランキング", edit_user_path(current_user) ,class:'mypage-nav-list-item' if user_signed_in?%>
+        <i class="icon-arrow-right"></i>
+     </li>
+     <li>
+        <%= link_to "閲覧ランキング", edit_user_path(current_user) ,class:'mypage-nav-list-item' if user_signed_in?%>
+        <i class="icon-arrow-right"></i>
+     </li>
       <li>
         <%= link_to "マイページ", user_path(current_user.id) ,class:'mypage-nav-list-item'if user_signed_in? %>
         <i class="icon-arrow-right"></i>
