--- a/app/assets/stylesheets/side.scss
+++ b/app/assets/stylesheets/side.scss
@@ -3,33 +3,76 @@
   width: 280px;
   margin-right: 20px;
   margin-left: 45px;
-}
-.mypage-nav-list{
-  margin-top: 67px;
-}
-.mypage-nav-list li:first-child {
-  border: 0;
+  .mypage-nav-list{
+    margin-top: 67px;
+    li{
+      position: relative;
+    .mypage-nav-list-item{
+      position: relative;
+      display: block;
+      min-height: 48px;
+      padding: 16px;
+      background: #fff;
+      font-size: 14px;
+      color: #333;
+      }
+      .fa-sort-down {
+        position: absolute;
+        top: 50%;
+        right: 16px;
+        color: #ccc;
+        -webkit-transform: translate(0, -50%);
+        transform: translate(0, -50%);
+        -webkit-transition: all ease-out .2s;
+        transition: all ease-out .2s;
+      }
+    }
+  }
+  .mypage-nav-list li:first-child {
+    border: 0;
+    position: relative;
+    .mypage-nav-list-item{
+      position: relative;
+      display: block;
+      min-height: 48px;
+      padding: 16px;
+      background: #fff;
+      font-size: 14px;
+      color: #333;
+      text-decoration: none;
+    }
+    .fa-sort-down {
+      position: absolute;
+      top: 50%;
+      right: 16px;
+      color: #ccc;
+      -webkit-transform: translate(0, -50%);
+      transform: translate(0, -50%);
+      -webkit-transition: all ease-out .2s;
+      transition: all ease-out .2s;
+    }
+  }
 }
 
-.mypage-nav-list-item{
-  position: relative;
-  display: block;
-  min-height: 48px;
-  padding: 16px;
+
+.side-select{
+  width: 239px;
+  height: 46px;
+  border: none;
   background: #fff;
   font-size: 14px;
   color: #333;
+  padding-left: 19px;
 }
-a {
-  text-decoration: none;
-}
-.icon-arrow-right {
-  position: absolute;
-  top: 50%;
-  right: 16px;
-  color: #ccc;
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  -webkit-transition: all ease-out .2s;
-  transition: all ease-out .2s;
-}
+select {
+  -webkit-appearance: none;/* ベンダープレフィックス(Google Chrome、Safari用) */
+  -moz-appearance: none; /* ベンダープレフィックス(Firefox用) */
+  appearance: none; /* 標準のスタイルを無効にする */
+  }
+  ::-ms-expand { /* select要素のデザインを無効にする（IE用） */
+  display: none;
+  }
+
+
+
+
