--- a/app/views/questions/_l-side.html.erb
+++ b/app/views/questions/_l-side.html.erb
@@ -6,14 +6,13 @@
         <i class="fas fa-sort-down"></i>
      </li>
      <li>
-        <%# <%= link_to "性別", edit_user_path(current_user) ,class:'mypage-nav-list-item' if user_signed_in?%> 
-        <select name="select" onChange="location.href=value;" class="side-select" >
+     <select name="select" onChange="location.href=value;" class="side-select" >
           <option value="#" class="default">性別</option>
-          <option value="/questions/men">男性</option>
-          <option value="/questions/lady">女性</option>
-        </select>
-        <i class="fas fa-sort-down"></i>
-     </li>
+          <option value="/questions/men/select">男性</option>
+          <option value="/questions/lady/select">女性</option>
+        </select> 
+        <i class="fas fa-sort-down"></i> 
+      </li>
      <li>
         <%= link_to "年代", edit_user_path(current_user) ,class:'mypage-nav-list-item' if user_signed_in?%>
         <i class="fas fa-sort-down"></i>
@@ -37,3 +36,4 @@
     </ul>
   </nav>
 </div>
+
