--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,12 +11,12 @@
 
   <div class="form-group">
     <%= f.label :gender ,'性別'%><br />
-    <%= f.collection_select :gender, Gender.all, :value, :value  , { prompt: '--' }, class:"form-control"%>
+    <%= f.collection_select :gender, Gender.all, :id, :value  , { prompt: '--' }, class:"form-control"%>
   </div>
 
   <div class="form-group">
     <%= f.label :gender ,'年代'%><br />
-    <%= f.collection_select :age, Age.all, :value, :value , { prompt: '--' }, class:"form-control"%>
+    <%= f.collection_select :age, Age.all, :id, :value , { prompt: '--' }, class:"form-control"%>
   </div>
 
   <div class="form-group">
