--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -9,6 +9,10 @@
         <div class="form-group padding-top-15per">
           <%=f.text_field:title ,class:'form-control'%>
         </div>
+        <div class="form-group">
+          <%= f.label :category ,'カテゴリー'%><br />
+          <%= f.collection_select :category, Category.all, :id, :value  , { prompt: '--' }, class:"form-control"%>
+        </div>
         <%=f.label:body,"本文"%>
         <div class="form-group padding-top-15per">
           <%=f.text_area:body ,rows: 10,class:'form-control'%>
