--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,6 +10,14 @@
         <%= f.text_field :name, autofocus: true  ,class:"form-control"%>
       </div>
     </div>
+     <div class="form-group">
+      <%= f.label :gender ,'性別'%><br />
+      <%= f.collection_select :gender, Gender.all, :id, :value  , { prompt: '--' }, class:"form-control"%>
+    </div>
+    <div class="form-group">
+      <%= f.label :gender ,'年代'%><br />
+      <%= f.collection_select :age, Age.all, :id, :value , { prompt: '--' }, class:"form-control"%>
+    </div>
     <div class="form-group">
       <div class="field-label">
         <%= f.label :email ,'メールアドレス'%>
