ベストアンサー編集

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">質問箱</a>
+          <a class="navbar-brand" href="/">恋愛質問箱</a>
         </div>
         
         <div class="collapse navbar-collapse" id="navigation">
