--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -247,3 +247,17 @@ dialog::backdrop {
 .btn-danger{
   margin-bottom:30px;
 }
+
+.bestanswer2{
+  display: inline-block;
+    color: #333;
+    border: 1px solid white;
+    background: #f5f5f5;
+    padding: 8px 16px;
+    border-radius: 40px;
+    position: absolute;
+}
+
+.new_reaction{
+  margin-top: 80px;
+}
