イイねランキング

--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -261,3 +261,14 @@ dialog::backdrop {
 .new_reaction{
   margin-top: 80px;
 }
+.rank{
+  .my-gold{
+    color: #fecb81;
+  }
+  .my-silver{
+    color: #BBBBBB;
+  }
+  .my-copper{
+    color: #FF8856;
+  }
+}
