--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -56,7 +56,7 @@
     <%elsif user_signed_in?%>
       <%= link_to "/bookmarks/#{@question.id}",method: :delete do%>
         <button class="bookmark2">
-          <i class="fas fa-bookmark"></i>
+          <i class="far fa-bookmark my-black"></i>
           <span>ブックマーク解除</span>
         </button>
       <%end%> 
