--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -145,36 +145,40 @@ ul {
 }
 }
 
-.bookmark{
-  display: inline-block;
-  color: #333;
-  border: 1px solid white;
-  background: white;
-  padding: 8px 16px;
-  border-radius: 40px;
-  position: absolute;
-  margin-left: 13px;
-  // top: 334px;
-  // left: 230px;
-  .span{
-    font-size: 14px;
-  }
-}
-
-.bookmark2{
-  display: inline-block;
-  color: #333;
-  border: 1px solid black;
-  background: white;
-  padding: 8px 16px;
-  border-radius: 40px;
-  position: absolute;
-  margin-left: 13px;
-  .my-black{
-    color:black;
-  }
-  .span{
-    font-size: 14px;
+.btn-line{
+  display:inline-flex;
+  .bookmark-line{
+    cursor: pointer;
+    cursor: hand;
+    .bookmark{
+      display: inline-block;
+      color: #333;
+      border: 1px solid black;
+      background: white;
+      padding: 8px 16px;
+      border-radius: 40px;
+      position: absolute;
+      margin-left: 13px;
+    .span{
+      font-size: 14px;
+    }
+  }  
+  .bookmark2{
+    display: inline-block;
+    color: #333;
+    border: 1px solid black;
+    background: white;
+    padding: 8px 16px;
+    border-radius: 40px;
+    position: absolute;
+    margin-left: 13px;
+    .my-black{
+      color:black;
+    }
+    .span{
+      font-size: 14px;
+      }
+    }
   }
 }
 
