--- a/app/views/questions/category.html.erb
+++ b/app/views/questions/category.html.erb
@@ -2,8 +2,7 @@
 <%= render 'questions/l-side'%>
 <div class="container">
   <ul class="row",style="padding-left: 0px;padding-top: 0px;">
-    <% @questions.each do |question|%>
-      <% question.each do |q|%>
+    <% @questions.each do |q|%>
         <li class="question-form">
           <p class="title">
             <%=link_to(q.title, "/questions/#{q.id}") %>
@@ -12,7 +11,6 @@
             <%=q.created_at.strftime("%Y年%m月%d日")%>
           </p> 
         </li>
-      <%end%>
     <%end%>
   </ul>
 </div>
