--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -39,29 +39,18 @@
         <%=@question.created_at.strftime("%Y年%m月%d日")%>
       </p>
     </div>
-    <% if current_user  %>
-      <%=link_to '編集',edit_question_path(@question),class:'btn btn-primary',style:'margin-bottom:30px;margin-right:10px;'if @question.user_id == current_user.id%> 
-    <% if @question.user_id == current_user.id  %>
-      <button id="open" class='btn btn-danger'>削除</button>
-    <%end%>
-      <%=link_to '回答する',"/questions/#{@question.id}/answers/new",class:'btn btn-info',style:'margin-bottom:30px;margin-right:10px;'if @question.user_id != current_user.id%>
-    <%end%>
-    <% if user_signed_in? && !Bookmark.exists?(user_id: current_user.id, question_id: @question.id)%>
-      <%= link_to "/questions/#{@question.id}/bookmark",method: :post do%>
-        <button class="bookmark">
-          <i class="far fa-bookmark"></i>
-          <span>ブックマーク</span>
-        </button>
+    <div class="btn-line">
+      <% if current_user  %>
+        <%=link_to '編集',edit_question_path(@question),class:'btn btn-primary',style:'margin-bottom:30px;margin-right:10px;'if @question.user_id == current_user.id%> 
+      <% if @question.user_id == current_user.id  %>
+        <button id="open" class='btn btn-danger'>削除</button>
       <%end%>
-    <%elsif user_signed_in?%>
-      <%= link_to "/bookmarks/#{@question.id}",method: :delete do%>
-        <button class="bookmark2">
-          <i class="far fa-bookmark my-black"></i>
-          <span>ブックマーク解除</span>
-        </button>
-      <%end%> 
-    <%else%>
-    <%end%>
+        <%=link_to '回答する',"/questions/#{@question.id}/answers/new",class:'btn btn-info',style:'margin-bottom:30px;margin-right:10px;'if @question.user_id != current_user.id%>
+      <%end%>
+      <div class="bookmark-line">
+        <%= render partial: "bookmarks/bookmark", locals: { question: @question } %>
+      </div>
+    </div>
   </div>
 
   <% if @bestanswer %>
@@ -86,6 +75,7 @@
 
   <ul style="padding: 0">
     <% @answers.each do |answer| %>
+    <% if answer.is_best == 0%>
     <li class="li">
       <div class="thumbnail__caption">
         <div class="answer-prof">
@@ -116,6 +106,7 @@
           <%end%>
         <%end%>
       <%end%>
+    <% end %>
     
       </div>
       <% if current_user%>
@@ -132,6 +123,7 @@
       
 
       <% answer.reactions.each do |reaction| %>
+
         <div class="reactionusername">
           <%if @question.user.image%>
             <%= image_tag "#{@question.user.image}" ,class:"icon_image2"%> 
@@ -151,8 +143,10 @@
             <%=link_to '削除',reaction_path(reaction),method: :delete,data: {confirm: "削除しますか？"},style:'margin-bottom:10px;,margin-left:10px;' if reaction.user_id == current_user.id%>
           <%end%>
         </div>
+ 
       <%end%>
     </li>
     <% end %>
+    <%=  @question.impressionist_count %>
   </ul>  
 </div>
