ユーザーランキング実装

--- a/app/views/questions/_l-side.html.erb
+++ b/app/views/questions/_l-side.html.erb
@@ -4,30 +4,30 @@
       <li>
         <select name="select" onChange="location.href=value;" class="side-select" >
           <option value="#" class="default">カテゴリー</option>
-          <option value="/questions/lovingexpression/select">愛情表現</option>
-          <option value="/questions/longrangelove/select">遠距離恋愛</option>
-          <option value="/questions/rundown/select">駆け落ち</option>
-          <option value="/questions/koikatsu/select">恋活</option>
-          <option value="/questions/marriage/select">婚活</option>
-          <option value="/questions/triangle/select">三角関係</option>
-          <option value="/questions/jealousy/select">嫉妬</option>
-          <option value="/questions/brokenheart/select">失恋</option>
-          <option value="/questions/workromance/select">職場恋愛</option>
-          <option value="/questions/sexless/select">セックスレス</option>
-          <option value="/questions/sex/select">セックス</option>
-          <option value="/questions/kiss/select">接吻</option>
-          <option value="/questions/polysexuality/select">多性愛</option>
-          <option value="/questions/date/select">デート</option>
-          <option value="/questions/cohabitation/select">同棲</option>
-          <option value="/questions/nampa/select">ナンパ</option>
-          <option value="/questions/catastrophic/select">破局</option>
-          <option value="/questions/firstlove/select">初恋</option>
-          <option value="/questions/firstglance/select">一目ぼれ</option>
-          <option value="/questions/dried/select">妾</option>
-          <option value="/questions/concubine/select">略奪愛</option>
-          <option value="/questions/plunderlove/select">両性愛</option>
-          <option value="/questions/affair/select">不倫</option>
-          <option value="/questions/divorce/select">離婚</option>
+          <option value="/questions/lovingexpression/category">愛情表現</option>
+          <option value="/questions/longrangelove/category">遠距離恋愛</option>
+          <option value="/questions/rundown/category">駆け落ち</option>
+          <option value="/questions/koikatsu/category">恋活</option>
+          <option value="/questions/marriage/category">婚活</option>
+          <option value="/questions/triangle/category">三角関係</option>
+          <option value="/questions/jealousy/category">嫉妬</option>
+          <option value="/questions/brokenheart/category">失恋</option>
+          <option value="/questions/workromance/category">職場恋愛</option>
+          <option value="/questions/sexless/category">セックスレス</option>
+          <option value="/questions/sex/category">セックス</option>
+          <option value="/questions/kiss/category">接吻</option>
+          <option value="/questions/polysexuality/category">多性愛</option>
+          <option value="/questions/date/category">デート</option>
+          <option value="/questions/cohabitation/category">同棲</option>
+          <option value="/questions/nampa/category">ナンパ</option>
+          <option value="/questions/catastrophic/category">破局</option>
+          <option value="/questions/firstlove/category">初恋</option>
+          <option value="/questions/firstglance/category">一目ぼれ</option>
+          <option value="/questions/dried/category">妾</option>
+          <option value="/questions/concubine/category">略奪愛</option>
+          <option value="/questions/plunderlove/category">両性愛</option>
+          <option value="/questions/affair/category">不倫</option>
+          <option value="/questions/divorce/category">離婚</option>
         </select>
         <%# <%= link_to "質問カテゴリー", edit_user_path(current_user) ,class:'mypage-nav-list-item' if user_signed_in?%> 
         <i class="fas fa-sort-down"></i>
@@ -57,11 +57,15 @@
         <i class="fas fa-sort-down"></i>
      </li>
      <li>
-        <%= link_to "回答ランキング", edit_user_path(current_user) ,class:'mypage-nav-list-item' if user_signed_in?%>
+        <%= link_to "ユーザーランキング", questions_userrank_path(@question) ,class:'mypage-nav-list-item' %>
         <i class="icon-arrow-right"></i>
      </li>
      <li>
         <%= link_to "人気質問ランキング", questions_rank_path(@question) ,class:'mypage-nav-list-item' %>
+        <i class="icon-arrow-right"></i>
+     </li>
+     <li>
+        <%= link_to "閲覧ランキング", questions_pvrank_path(@question) ,class:'mypage-nav-list-item' %>
         <i class="icon-arrow-right"></i>
      </li>
       <li>
