マイページ編集

--- a/app/views/questions/_l-side.html.erb
+++ b/app/views/questions/_l-side.html.erb
@@ -43,15 +43,15 @@
      <li>
         <select name="select" onChange="location.href=value;" class="side-select" >
           <option value="#" class="default">年齢</option>
-          <option value="/questions/10later/select">10第後半</option>
-          <option value="/questions/20first/select">20代前半</option>
-          <option value="/questions/20later/select">20代後半</option>
-          <option value="/questions/30first/select">30代前半</option>
-          <option value="/questions/30later/select">30代後半</option>
-          <option value="/questions/40first/select">40代前半</option>
-          <option value="/questions/40later/select">40代後半</option>
-          <option value="/questions/50later/select">50代</option>
-          <option value="/questions/60later/select">60代</option>
+          <option value="/questions/10later/age">10第後半</option>
+          <option value="/questions/20first/age">20代前半</option>
+          <option value="/questions/20later/age">20代後半</option>
+          <option value="/questions/30first/age">30代前半</option>
+          <option value="/questions/30later/age">30代後半</option>
+          <option value="/questions/40first/age">40代前半</option>
+          <option value="/questions/40later/age">40代後半</option>
+          <option value="/questions/50later/age">50代</option>
+          <option value="/questions/60later/age">60代</option>
         </select>
         <%# <%= link_to "年代", edit_user_path(current_user) ,class:'mypage-nav-list-item' if user_signed_in?%> 
         <i class="fas fa-sort-down"></i>
