--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,32 +1,37 @@
-
-
+<%= render 'questions/aside'%>
+<%= render 'questions/l-side'%>
 <div class="container">
-    <div class="l-content">
-      <section class="tabs">
-        <input id="all" checked="hecked" name="tab_item" type="radio">
-        <label class="tab_item" for="all"> 投稿一覧</label>
-        <input id="programming"  name="tab_item" type="radio">
-        <label class="tab_item" for="programming"> ブックマーク一覧</label>
+  <div class="row">
+    <div class="tabs">
+      <input id="all" type="radio" name="tab_item" checked>
+      <label class="tab_item" for="all">投稿一覧</label>
+      <input id="programming" type="radio" name="tab_item">
+      <label class="tab_item" for="programming">ブックマーク一覧</label>
+      <% @questions.each do |question|%>
         <div class="tab_content" id="all_content">
-          <div class="tab_content_description">
-            <ul class="mypage-item-list tab-pane.active">
-              <li class="first-child">
-              aaaa
-              </li>
-            </ul>
-          <div>
+          <li class="question-form">
+            <p class="title">
+              <%=link_to(question.title, "/questions/#{question.id}") %>
+            </p>
+            <p>
+              <%=question.created_at.strftime("%Y年%m月%d日")%>
+            </p> 
+        </li>
         </div>
+      <%end%>
+        <% @bookmark_questions.each do |question|%>
         <div class="tab_content" id="programming_content">
-          <div class="tab_content_description">
-            <ul class="mypage-item-list tab-pane">
-              <li class="mypage-item-not-found bold">
-                 
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-    <div>
+          <li class="question-form">
+            <p class="title">
+              <%=link_to(question.title, "/questions/#{question.id}") %>
+            </p>
+            <p>
+              <%=question.created_at.strftime("%Y年%m月%d日")%>
+            </p> 
+        </li>
+      </div> 
+    <%end%>
+  </div>
 </div>
     
 
