--- a/app/assets/stylesheets/questions.scss
+++ b/app/assets/stylesheets/questions.scss
@@ -7,6 +7,7 @@ body{
   background-color:#f5f5f5;
 }
 
+
 .navbar{
   height:100px;
   background-color:white;
@@ -103,47 +104,92 @@ ul {
   border-bottom: medium dotted gray;
 }
 
-.search-box__text {
-  position: relative;
-  padding: 0;
-  width: 70%;
-  height: 40px;
-  font-size: 14px;
-  padding-left: 10px;
-  padding-right: 40px;
-  border: 1px solid #cccccc;
-  border-radius: 4px;
-  background-color: white;
-  margin-left: 67px;
-
+@media screen and (min-width:900px){
+  .search-box__text {
+    position: relative;
+    padding: 0;
+    width: 70%;
+    height: 40px;
+    font-size: 14px;
+    padding-left: 10px;
+    padding-right: 40px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    background-color: white;
+    margin-left: 67px;
+  }
 }
+@media screen and (max-width:450px){
+  .search-box__text {
+    position: relative;
+    padding: 0;
+    width: 30%;
+    height: 40px;
+    font-size: 14px;
+    padding-left: 10px;
+    padding-right: 40px;
+    border: 1px solid #cccccc;
+    border-radius: 4px;
+    background-color: white;
+    margin-left: 67px;
+  }
+}
+
 .search-box__btn {
   width:40px;
   height:40px;
   border-radius: 4px;
 }
+@media screen and (min-width:900px){
+  .footer-write-btn {
+    bottom: 32px;
+    right: 32px;
+    width: 160px;
+    height: 160px;
+    font-size: 22px;
+    position: fixed;
+    z-index: 1000;
+    border-radius: 50%;
+    background:#33CCFF;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    p {
+      margin: 32px 0 0;
+  } 
+  .fa-pen {
+    margin: 8px 0 0;
+    font-size: 43px;
+  }
+  }
+}
 
-.footer-write-btn {
-  bottom: 32px;
-  right: 32px;
-  width: 160px;
-  height: 160px;
-  font-size: 22px;
-  position: fixed;
-  z-index: 1000;
-  border-radius: 50%;
-  background:#33CCFF;
-  color: #fff;
-  text-align: center;
-  text-decoration: none;
-  p {
-    margin: 32px 0 0;
- } 
- .fa-pen {
-  margin: 8px 0 0;
-  font-size: 43px;
+@media screen and (max-width:450px){
+  .footer-write-btn {
+    bottom: 32px;
+    right: 32px;
+    width: 120px;
+    height: 120px;
+    font-size: 22px;
+    position: fixed;
+    z-index: 1000;
+    border-radius: 50%;
+    background:#33CCFF;
+    color: #fff;
+    text-align: center;
+    text-decoration: none;
+    p {
+      margin: 32px 0 0;
+      font-size: 18px;
+  } 
+  .fa-pen {
+    margin: 8px 0 0;
+    font-size: 30px;
+  }
+  }
 }
-}
+
+
 
 .btn-line{
   display:inline-flex;
@@ -266,3 +312,4 @@ dialog::backdrop {
 .new_reaction{
   margin-top: 80px;
 }
+
