パンくず追加

--- a/app/views/questions/pvrank.html.erb
+++ b/app/views/questions/pvrank.html.erb
@@ -1,4 +1,5 @@
-
+<% breadcrumb :rank_pv %>
+<%= render 'questions/breadcrumbs'%>
 <%= render 'questions/aside'%>
 
 <%= render 'questions/l-side'%>
