--- a/app/views/questions/rank.html.erb
+++ b/app/views/questions/rank.html.erb
@@ -1,5 +1,6 @@
+<% breadcrumb :rank_question %>
+<%= render 'questions/breadcrumbs'%>
 <%= render 'questions/aside'%>
-
 <%= render 'questions/l-side'%>
 
 <div class="container">
