--- a/app/views/questions/userrank.html.erb
+++ b/app/views/questions/userrank.html.erb
@@ -1,3 +1,5 @@
+<% breadcrumb :rank_user %>
+<%= render 'questions/breadcrumbs'%>
 <%= render 'questions/aside'%>
 
 <%= render 'questions/l-side'%>
