--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,6 @@
+<% breadcrumb :edit_user %>
+<%= render 'questions/breadcrumbs'%>
 <div class="container">
-
 <h2 class="text-center">ユーザー編集</h2>
   <%= form_for(current_user) do |f| %>
     <div class="form-group">
