--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,5 @@
+<% breadcrumb :mypage %>
+<%= render 'questions/breadcrumbs'%>
 <%= render 'questions/aside'%>
 <%= render 'questions/l-side'%>
 <div class="container">
