--- a/app/views/questions/gender.html.erb
+++ b/app/views/questions/gender.html.erb
@@ -1,3 +1,8 @@
+<%case params.values_at :controller, :action%> 
+<%when ['questions', 'gender']%>
+  <% breadcrumb :gender %>
+<%end%>
+<%= render 'questions/breadcrumbs'%>
 <%= render 'questions/aside'%>
 <%= render 'questions/l-side'%>
 <div class="container">
